fixed apply stage

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -27,12 +27,12 @@ pipeline {
                 accessKeyVariable: 'AWS_ACCESS_KEY_ID',
                 secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
             ]]) 
-            
+            {
+                dir('iac/terraform/qaframework')
                 {
-                echo "Terraform action is --> ${action}"
-                sh ('terraform ${action} --auto-approve')
+                sh ('terraform apply --auto-approve')
                 }
-                 
+            }    
            }
         }
     }
