--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -30,7 +30,7 @@ pipeline {
             {
                 dir('iac/terraform/qaframework')
                 {
-                sh ('terraform apply --auto-approve')
+                sh ('terraform destroy --auto-approve')
                 }
             }    
            }
