added echo destroy

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -31,6 +31,7 @@ pipeline {
                 dir('iac/terraform/qaframework')
                 {
                 sh ('terraform destroy --auto-approve')
+                echo "destroyed terraform infra in aws"
                 }
             }    
            }
